Application starts without errors